compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_annotation_on_type_requires_v1_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type Wibble\n"
---
----- SOURCE CODE

@internal
pub type Wibble


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ This requires a Gleam version >= 1.1.0

The `@internal` annotation was introduced in version v1.1.0. But the Gleam
version range specified in your `gleam.toml` would allow this code to run
on an earlier version like v1.0.0, resulting in compilation errors!

Hint: Remove the version constraint from your `gleam.toml` or update it to
be:

    gleam = ">= 1.1.0"
