compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_parametric_type_in_public_function_warns.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type InternalBox(a) {\n  InternalBox(value: a)\n}\n\npub fn new(x: Int) -> InternalBox(Int) { InternalBox(x) }\n"
---
----- SOURCE CODE

@internal
pub type InternalBox(a) {
  InternalBox(value: a)
}

pub fn new(x: Int) -> InternalBox(Int) { InternalBox(x) }


----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:7:1
  │
7 │ pub fn new(x: Int) -> InternalBox(Int) { InternalBox(x) }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The following internal type is exposed by this public definition:

    InternalBox(Int)

Internal types are hidden from the package's documentation, so consumers
cannot tell what they are. Either remove the `@internal` annotation, or
re-export the type through a `pub type` alias.
