compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_type_in_public_function_argument.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type Wibble {\n  Wibble\n}\n\npub fn wibble(_wibble: Wibble) -> Int { 1 }\n"
---
----- SOURCE CODE

@internal
pub type Wibble {
  Wibble
}

pub fn wibble(_wibble: Wibble) -> Int { 1 }


----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:7:1
  │
7 │ pub fn wibble(_wibble: Wibble) -> Int { 1 }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The following internal type is exposed by this public definition:

    Wibble

Internal types are hidden from the package's documentation, so consumers
cannot tell what they are. Either remove the `@internal` annotation, or
re-export the type through a `pub type` alias.
